added dejavu, added film link for irreplaceable

--- a/films/dejavu.html
+++ b/films/dejavu.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <base href="/">
-    <title>IЯЯEPLACEABLE</title>
+    <title>Déjà Vu</title>
     <meta name="X-UA-Compatible" content="IE&#x3D;edge">
     <meta name="viewport" content="width&#x3D;device-width,&#x20;initial-scale&#x3D;1.0">
     <meta property="og&#x3A;type" content="website">
@@ -33,61 +33,31 @@
     <div class="d-flex flex-column justify-content-left">
     <div class="row">
         <div class="slider-desc">
-            <div class="slider-desc-content">                 
-                <span class="slider-title">IЯЯEPLACEABLE</span>
+            <div class="slider-desc-content"> 
+                <span class="slider-title">Déjà Vu</span>
                 <p class="slider-text">
-                    When John experiences sexual impotence with his rather cold, but attractive wife Anna, the fear of being replaced is starting to haunt him as it leads to obsessive worries about her potential infidelity with another man, an unfamiliar individual he starts repeatedly encountering.
+                    A young couple faces disappointment after realizing the things in their sex life are not as they used to be.                
                 </p>
                 <br>
-                <span class ="slider-watch"><a  target="_blank" href="https://www.youtube.com/watch?v=l4F1S2APsG4" class="text-lightgrey">WATCH FILM</a></span>
+                <span class ="slider-watch"><a  target="_blank" href="https://www.youtube.com/watch?v=xWawvmcXj7A" class="text-lightgrey">WATCH FILM</a></span>
                 <br>
                 <div class="slider-logos">
-                    <img  class="slider-logo slider-logo-lightframers" src="../images/logos 5c5c5c/lightframers.png" alt="LIGHTFRAMERS" />
                     <img  class="slider-logo slider-logo-escac" src="../images/logos 5c5c5c/escac.png" alt="ESCAC" />
-                    <img  class="slider-logo slider-logo-sae" src="../images/logos 5c5c5c/sae.png" alt="SAE" />
-                    <img  class="slider-logo slider-logo-avisual" src="../images/logos 5c5c5c/avisual.png" alt="AVISUAL" />
                 </div>  
             </div>
                    
         </div>      
         <div class="slider-content">
-            <section class="slider_container">
-                <section class="slider-12">
+            <section class="slider_container">            
+                <section class="slider-3">
                     <div class="slide">
-                        <img src="../images/irreplacable/1.jpg" alt="">
+                        <img src="../images/dejavu/1.jpg" alt="">
                     </div>
                     <div class="slide">
-                        <img src="../images/irreplacable/2.jpg" alt="">
+                        <img src="../images/dejavu/2.jpg" alt="">
                     </div>
                     <div class="slide">
-                        <img src="../images/irreplacable/3.jpg" alt="">
-                    </div>
-                    <div class="slide">
-                        <img src="../images/irreplacable/4.jpg" alt="">
-                    </div>
-                    <div class="slide">
-                        <img src="../images/irreplacable/5.jpg" alt="">
-                    </div>
-                    <div class="slide">
-                        <img src="../images/irreplacable/6.jpg" alt="">
-                    </div>
-                    <div class="slide">
-                        <img src="../images/irreplacable/7.jpg" alt="">
-                    </div>
-                    <div class="slide">
-                        <img src="../images/irreplacable/8.jpg" alt="">
-                    </div>
-                    <div class="slide">
-                        <img src="../images/irreplacable/9.jpg" alt="">
-                    </div>
-                    <div class="slide">
-                        <img src="../images/irreplacable/10.jpg" alt="">
-                    </div>
-                    <div class="slide">
-                        <img src="../images/irreplacable/11.jpg" alt="">
-                    </div>
-                    <div class="slide">
-                        <img src="../images/irreplacable/12.jpg" alt="">
+                        <img src="../images/dejavu/3.jpg" alt="">
                     </div>
                 </section>
             </section>
