--- a/index.html
+++ b/index.html
@@ -237,6 +237,30 @@
                     </div>
                 </div>               
             </div>
+            <div class="horizontal-slide horizontal-slide-photo" data-slide-index="7" onclick="handleSlideClick(3)">
+                <a class="info-link" href="./films/dejavu.html">
+                    <img src="./images/dejavu/2.jpg" alt="Déjà Vu">
+                   
+                    <span class="info-button">
+                        <i class="fa-solid fa-ellipsis"></i>
+                    </span>
+                </a>
+                <div class="layout-left mt-3 max-width">
+                    <div class="row no-gutters">
+                        <div class="col-auto">
+                            <p class="text-light mb-0 letter-space">
+                                <span class="movie-title">Déjà Vu</span>
+                            </p>
+                        </div>
+                        <div class="col-md">
+                            <p class="text-light mb-0 pl-0 pl-md-2">
+                                <span class="letter-space show-hover">András Heszky, Stanzin Jigmet <span class="movie-cast ml-1 ml-md-1 text-lightgrey">Cast</span>  Elena Sandell, Javi López</span>
+                                <br>
+                            </p> 
+                        </div>
+                    </div>
+                </div>               
+            </div>
             <div class="horizontal-slide horizontal-slide-photo" data-slide-index="8" onclick="handleSlideClick(8)">
                 <a class="info-link" href="./films/ordinarypeople.html">
                     <img src="./images/ordinary_people/6.jpg" alt="Ordinary People">
