added carrer d ortigosa

--- a/index.html
+++ b/index.html
@@ -86,6 +86,31 @@
                     </div>
                 </div>
             </div>  
+            <div class="horizontal-slide horizontal-slide-photo" data-slide-index="2" onclick="handleSlideClick(2)">
+                <a class="info-link"  href="./films/carrerdortigosa.html">
+                    <img src="./images/carrer_dortigosa/2.jpg" alt="Carrer d'Ortigosa">
+                   
+                    <span class="info-button">
+                        <i class="fa-solid fa-ellipsis"></i>
+                    </span>
+                </a>
+                <div class="layout-left mt-3 max-width">
+                    <div class="row no-gutters">
+                        <div class="col-auto">
+                            <p class="text-light mb-0 letter-space">
+                                <span class="movie-title">Carrer d'Ortigosa</span>
+                            </p>
+                        </div>
+                        <div class="col-md">
+                            <p class="text-light mb-0 pl-0 pl-md-2">
+                                <span class="letter-space show-hover">Ivor Martinić  <span class="movie-cast ml-1 ml-md-1 text-lightgrey">Cast</span>  Santiago Bolívar, Paulo Días, Júlia Ferré</span>
+                                <br>
+                           
+                            </p> 
+                        </div>
+                    </div>
+                </div>
+            </div>  
             <div class="horizontal-slide horizontal-slide-photo" data-slide-index="3" onclick="handleSlideClick(3)">
                 <a class="info-link" href="./films/ark.html">
                     <img src="./images/ARK/12.jpg" alt="Ark">
