carrer_dortigosa hide

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                     </div>
                 </div>
             </div>  
-            <div class="horizontal-slide horizontal-slide-photo" data-slide-index="2" onclick="handleSlideClick(2)">
+            <div style="display: none;" class="horizontal-slide horizontal-slide-photo" data-slide-index="2" onclick="handleSlideClick(2)">
                 <a class="info-link"  href="./films/carrerdortigosa.html">
                     <img src="./images/carrer_dortigosa/2.jpg" alt="Carrer d'Ortigosa">
                    
